# word-twist-solver

./: main.py  solver.py
solver/: CMakeLists.txt  solver.cpp
